--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,94 +1,82 @@
 alabaster==0.7.13
-attrs==22.2.0
-autopep8==1.7.0
-Babel==2.11.0
+autopep8==1.5.7
+Babel==2.14.0
 bleach==6.0.0
-certifi==2022.12.7
+certifi==2024.2.2
 cffi==1.15.1
-charset-normalizer==3.0.1
-cryptography==39.0.1
-Deprecated==1.2.13
+charset-normalizer==3.3.2
+cryptography==42.0.5
+Deprecated==1.2.14
 docopt==0.6.2
 docutils==0.18.1
 et-xmlfile==1.1.0
-exceptiongroup==1.1.0
-filelock==3.9.0
-flake8==5.0.4
-fugashi==1.2.1
+exceptiongroup==1.2.0
+flake8==3.9.2
 geographiclib==2.0
-greenlet==2.0.2
-huggingface-hub==0.12.0
-idna==3.4
+idna==3.6
 imagesize==1.4.1
-importlib-metadata==6.0.0
-importlib-resources==5.10.2
+importlib-metadata==6.7.0
+importlib-resources==5.12.0
 iniconfig==2.0.0
-install==1.3.5
-ipadic==1.0.0
-jaconv==0.3.3
-jageocoder==1.4.0
+jaconv==0.3.4
+jageocoder==2.1.2
 jaraco.classes==3.2.3
 jeepney==0.8.0
 jeraconv==0.2.1
-Jinja2==3.1.2
-keyring==23.13.1
+Jinja2==3.1.3
+keyring==24.1.1
 marisa-trie==0.7.8
-markdown-it-py==2.1.0
-MarkupSafe==2.1.2
-mccabe==0.7.0
+markdown-it-py==2.2.0
+MarkupSafe==2.1.5
+mccabe==0.6.1
 mdurl==0.1.2
-more-itertools==9.0.0
+more-itertools==9.1.0
 munkres==1.1.4
-numpy==1.24.2
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-openpyxl==3.1.1
-packaging==23.0
-pandas==1.5.3
-pkginfo==1.9.6
-pluggy==1.0.0
+numpy==1.21.1
+openpyxl==3.1.2
+packaging==24.0
+pandas==1.1.5
+pkginfo==1.10.0
+pluggy==1.2.0
 pockets==0.9.1
-polars==0.16.5
-pycodestyle==2.9.1
+polars==0.16.18
+portabletab==0.3.3
+pycapnp==1.3.0
+pycodestyle==2.7.0
 pycparser==2.21
-pyflakes==2.5.0
-Pygments==2.14.0
-pytest==7.2.1
-python-dateutil==2.8.2
-pytz==2022.7.1
-PyYAML==6.0
+pyflakes==2.3.1
+Pygments==2.17.2
+pytest==7.4.4
+python-dateutil==2.9.0.post0
+pytz==2024.1
 readme-renderer==37.3
-regex==2022.10.31
-requests==2.28.2
-requests-toolbelt==0.10.1
+regex==2023.12.25
+requests==2.31.0
+requests-toolbelt==1.0.0
 rfc3986==2.0.0
-rich==13.3.1
+rich==13.7.1
+Rtree==1.0.1
 SecretStorage==3.3.3
 six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==5.3.0
-sphinx-rtd-theme==1.2.0
-sphinxcontrib-applehelp==1.0.4
+sphinx-rtd-theme==1.3.0
+sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jquery==2.0.0
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-napoleon==0.7
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
-SQLAlchemy==2.0.3
-tokenizers==0.13.2
 toml==0.10.2
 tomli==2.0.1
-torch==1.13.1
-tqdm==4.64.1
-transformers==4.26.1
+tqdm==4.66.2
 twine==4.0.2
-typing_extensions==4.5.0
-urllib3==1.26.14
+typing_extensions==4.7.1
+urllib3==2.0.7
 webencodings==0.5.1
-wrapt==1.14.1
+Werkzeug==2.2.3
+wrapt==1.16.0
 xlrd==2.0.1
-zipp==3.13.0
+zipp==3.15.0
