--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ openpyxl = "*"
 pandas = "*"
 requests = "*"
 xlrd = "*"
+munkres = "^1.1.4"
+regex = "^2023.12.25"
 
 
 [tool.poetry.group.dev.dependencies]
