--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "tablelinker-light"
-version = "1.0.0"
+version = "1.0.0.post2"
 description = "TableLinker: CSV data processing library (light version)"
 authors = ["Takeshi Sagara <sagara@info-proto.com>", "Akiko Aizawa <akiko@nii.ac.jp>"]
 readme = "README.md"
 maintainers = ["Takeshi Sagara <sagara@info-proto.com>"]
-repository = "https://github.com/KMCS-NII/tablelinker-lib"
+repository = "https://github.com/InfoProto/tablelinker-light"
 documentation = "https://tablelinker-light.readthedocs.io/"
 keywords = ["CSV", "tabular", "cleansing", "batch processing"]
 packages = [{include = "tablelinker"}]
